==> XieFField/OmniChassis/Wj/app/Chassis.c <==
#include "stm32f10x.h"                  // Device header
#include "Chassis.h"
#include "Servo.h"
#include "math.h"
#include "PID.h"
#include "bsp_motorTIM.h"
#include "bsp_ChassisEncoder.h"
#include "Incl_z.h"
#include "Delay.h"
#include <stdio.h>

void Chassis_GPIOInit(ChassisMotor_t *init)
{
    init->motor.motor_gpio[0].gpio = ChassisMotor1_GPIO;
    init->motor.motor_gpio[1].gpio = ChassisMotor2_GPIO;
    init->motor.motor_gpio[2].gpio = ChassisMotor3_GPIO;
    init->motor.motor_gpio[3].gpio = ChassisMotor4_GPIO;
    
    init->motor.motor_gpio[0].in1  = ChassisMotor1_GPIOLPin;
    init->motor.motor_gpio[1].in1  = ChassisMotor2_GPIOLPin;
    init->motor.motor_gpio[2].in1  = ChassisMotor3_GPIOLPin;
    init->motor.motor_gpio[3].in1  = ChassisMotor4_GPIOLPin;
    
    init->motor.motor_gpio[0].in2  = ChassisMotor1_GPIORPin;
    init->motor.motor_gpio[1].in2  = ChassisMotor2_GPIORPin;
    init->motor.motor_gpio[2].in2  = ChassisMotor3_GPIORPin;
    init->motor.motor_gpio[3].in2  = ChassisMotor4_GPIORPin;
    
    RCC_APB2PeriphClockCmd(ChassisMotor1_RCC | ChassisMotor2_RCC | ChassisMotor3_RCC | ChassisMotor4_RCC, ENABLE);
    
    //motor1
    GPIO_InitTypeDef Motor1_InitStructure;
    Motor1_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    Motor1_InitStructure.GPIO_Pin =  init->motor.motor_gpio[0].in1| init->motor.motor_gpio[0].in2;
    Motor1_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    
    GPIO_Init(init->motor.motor_gpio[0].gpio, &Motor1_InitStructure);
    GPIO_SetBits(init->motor.motor_gpio[0].gpio, init->motor.motor_gpio[0].in1| init->motor.motor_gpio[0].in2);
    
    //motor2
    
    GPIO_InitTypeDef Motor2_InitStructure;
    Motor2_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    Motor2_InitStructure.GPIO_Pin =  init->motor.motor_gpio[1].in1| init->motor.motor_gpio[1].in2;
    Motor2_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    
    GPIO_Init(init->motor.motor_gpio[1].gpio, &Motor2_InitStructure);
    GPIO_SetBits(init->motor.motor_gpio[1].gpio, init->motor.motor_gpio[1].in1| init->motor.motor_gpio[1].in2);
    
    //motor3
    
    GPIO_InitTypeDef Motor3_InitStructure;
    Motor3_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    Motor3_InitStructure.GPIO_Pin =  init->motor.motor_gpio[2].in1| init->motor.motor_gpio[2].in2;
    Motor3_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    
    GPIO_Init(init->motor.motor_gpio[2].gpio, &Motor3_InitStructure);
    GPIO_SetBits(init->motor.motor_gpio[2].gpio, init->motor.motor_gpio[2].in1| init->motor.motor_gpio[2].in2);
    
    //motor4
    
    GPIO_InitTypeDef Motor4_InitStructure;
    Motor4_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    Motor4_InitStructure.GPIO_Pin =  init->motor.motor_gpio[3].in1| init->motor.motor_gpio[3].in2;
    Motor4_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    
    GPIO_Init(init->motor.motor_gpio[3].gpio, &Motor4_InitStructure);
    GPIO_SetBits(init->motor.motor_gpio[3].gpio, init->motor.motor_gpio[3].in1| init->motor.motor_gpio[3].in2);
}

void Chassis_Init(void)
{  
    ChassisMotor.maxVx = 79000.2f ;
    ChassisMotor.maxVy = 79000.2f ;
    
    ChassisMotor.maxRpm_Left[0] = 307;  //已测试 307
    ChassisMotor.maxRpm_Left[1] = 360;  //已测试
    ChassisMotor.maxRpm_Left[2] = 350;  //已测试
    ChassisMotor.maxRpm_Left[3] = 345;
    
    ChassisMotor.maxRpm_Right[0] = 330; //已测试 330
    ChassisMotor.maxRpm_Right[1] = 360; //已测试
    ChassisMotor.maxRpm_Right[2] = 350; //已测试
    ChassisMotor.maxRpm_Right[3] = 345;
    
    ChassisMotor.gear = 3;              //档位1, 2, 3
    
    ChassisMotor.speedtap[0] = 0.3;
    ChassisMotor.speedtap[1] = 0.5;
    ChassisMotor.speedtap[2] = 1;
    ChassisMotor.pidMode = PID_POSITION;

    ChassisMotor.chassisVx = 0;
    ChassisMotor.chassisVy = 0;

    ChassisMotor.chassisVx_calc = 0;
    ChassisMotor.chassisVy_calc = 0;

    MotorPID_Init();
    ChassisPWM_Init();
    bsp_ChassisEncoder_Init();
    TIM6_Init(T);
    VL5300_Init();
    Chassis_GPIOInit(&ChassisMotor);
    PS2_Init();
//    PS2ToSlave1_Init();
}

void Chassis_PIDCalc(ChassisMotor_t *pid)
 {   
    int i;
    for(i = 0; i<4; i++)
    {
        if(pid->motor.motor_set[i].speed_set != pid->motor.motor_fdb[i].speed_fdb)
        {
            pid->motor.motor_set[i].pid_speed = PID_Calc(&Chassis_PID[i], pid->motor.motor_fdb[i].speed_fdb, pid->motor.motor_set[i].speed_set);
            
            
            if(myabs(pid->motor.motor_set[i].speed_set) < 0.1)
            {
                pid->motor.motor_set[i].pid_speed = 0;
            }
            float temp;
            
            if(pid->motor.motor_set[i].pid_speed > 0)
            {
                temp = pid->motor.motor_set[i].pid_speed / ChassisMotor.maxRpm_Left[i];
                pid->motor.motor_set[i].current_set = (uint16_t)(temp * 100);
            }
            else if(pid->motor.motor_set[i].pid_speed < 0)
            {
                temp = pid->motor.motor_set[i].pid_speed / ChassisMotor.maxRpm_Right[i];
                pid->motor.motor_set[i].current_set = (uint16_t)(temp * 100);
            }
            if(pid->motor.motor_set[i].current_set > 100){pid->motor.motor_set[i].current_set = 100;}
            
            //Motor Turn
            if(pid->motor.motor_set[i].pid_speed > 0)
            {
                GPIO_SetBits(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in1);
                GPIO_ResetBits(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in2);
            }
            else if(pid->motor.motor_set[i].pid_speed < 0)
            {
                GPIO_SetBits(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in2);
                GPIO_ResetBits(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in1);
            }
            else if(pid->motor.motor_set[i].pid_speed == 0)
            {
                GPIO_SetBits(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in1);
                GPIO_SetBits(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in2);
            }

        }
        else if((pid->motor.motor_set[i].speed_set == 0) && (pid->motor.motor_fdb[i].speed_fdb == 0))
        {
            pid->motor.motor_set[i].pid_speed = 0;
        }
//        Motor_Control(ChassisMotor.motor.motor_set[0].current_set, ChassisMotor.motor.motor_set[1].current_set, 
//                    ChassisMotor.motor.motor_set[2].current_set, ChassisMotor.motor.motor_set[3].current_set);
    }
}

void Motor_Control(int16_t current_1,int16_t current_2,int16_t current_3,int16_t current_4)
{
    ChassisMotor1_SetCompare(current_1);
    ChassisMotor2_SetCompare(current_2);
    ChassisMotor3_SetCompare(current_3);
    ChassisMotor4_SetCompare(current_4);
}

void Motor_Turn(ChassisMotor_t *turn)
{
    int i;
    for(i = 0; i < 4; i++)
    {
                if(turn->motor.motor_set[i].speed_set > 0)
                {
                    GPIO_SetBits(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in1);
                    GPIO_ResetBits(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in2);
                }
                else if(turn->motor.motor_set[i].speed_set < 0)
                {
                    GPIO_SetBits(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in2);
                    GPIO_ResetBits(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in1);
                }
                else if(turn->motor.motor_set[i].speed_set == 0)
                {
                    GPIO_SetBits(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in1);
                    GPIO_SetBits(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in2);
                }
    }
}

void Chassis_FSM_TEST(void)
{
//    Laser_Data = VL5300_GetDataSetPoint();
    chassis_ctrl = STOP_WAIT;
    Delay_s(3);
    chassis_ctrl = Forward_PATH;
    if(MedianFilter1() <= 420)
    {
        chassis_ctrl = STOP_WAIT;
        Delay_ms(1000);
        chassis_ctrl = Forward_PATH;
        if(MedianFilter1() <= 50)
        {
            chassis_ctrl = STOP_WAIT;
            Delay_ms(500);
            chassis_ctrl = Left_PATH;
            if(MedianFilter2() <= 50)
            {
                chassis_ctrl = STOP_WAIT;
                Delay_ms(1000);
                chassis_ctrl = Right_PATH;
                if(MedianFilter3() <= 1050)
                {
                    chassis_ctrl = STOP_WAIT;
                    Delay_ms(1000);
                    chassis_ctrl = Backward_PATH;
                    if(MedianFilter1() <= 2120)
                    {
                        chassis_ctrl = STOP_WAIT;
                    }
                }
            }
        }
    }
}
