==> 666niuma/niuma66/CLASS_TERM2/Core/Src/chassis.c <==
#include "main.h"

void Chassis_GPIOInit(ChassisMotor_t *init)
{
    // 初始化电机结构体
    init->motor.motor_gpio[0].gpio = ChassisMotor1_GPIO;
    init->motor.motor_gpio[1].gpio = ChassisMotor2_GPIO;
    init->motor.motor_gpio[2].gpio = ChassisMotor3_GPIO_CIN1; // Cin1 所属 GPIO
    init->motor.motor_gpio[3].gpio = ChassisMotor4_GPIO;

    init->motor.motor_gpio[0].in1 = ChassisMotor1_GPIOLPin;
    init->motor.motor_gpio[1].in1 = ChassisMotor2_GPIOLPin;
    init->motor.motor_gpio[2].in1 = ChassisMotor3_GPIOLPin;
    init->motor.motor_gpio[3].in1 = ChassisMotor4_GPIOLPin;

    init->motor.motor_gpio[0].in2 = ChassisMotor1_GPIORPin;
    init->motor.motor_gpio[1].in2 = ChassisMotor2_GPIORPin;
    init->motor.motor_gpio[2].in2 = ChassisMotor3_GPIORPin;
    init->motor.motor_gpio[3].in2 = ChassisMotor4_GPIORPin;

    // 启用 GPIO 时钟
    __HAL_RCC_GPIOD_CLK_ENABLE();
    __HAL_RCC_GPIOC_CLK_ENABLE(); // 启用 Cin1 所属 GPIO 时钟
    __HAL_RCC_GPIOE_CLK_ENABLE(); // 启用 Cin2 所属 GPIO 时钟

    // 配置电机 1 的方向引脚
    GPIO_InitTypeDef Motor1_InitStructure;
    Motor1_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
    Motor1_InitStructure.Pull = GPIO_NOPULL;
    Motor1_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
    Motor1_InitStructure.Pin = init->motor.motor_gpio[0].in1 | init->motor.motor_gpio[0].in2;
    HAL_GPIO_Init(init->motor.motor_gpio[0].gpio, &Motor1_InitStructure);
    HAL_GPIO_WritePin(init->motor.motor_gpio[0].gpio, init->motor.motor_gpio[0].in1 | init->motor.motor_gpio[0].in2, GPIO_PIN_RESET);

    // 配置电机 2 的方向引脚
    GPIO_InitTypeDef Motor2_InitStructure;
    Motor2_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
    Motor2_InitStructure.Pull = GPIO_NOPULL;
    Motor2_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
    Motor2_InitStructure.Pin = init->motor.motor_gpio[1].in1 | init->motor.motor_gpio[1].in2;
    HAL_GPIO_Init(init->motor.motor_gpio[1].gpio, &Motor2_InitStructure);
    HAL_GPIO_WritePin(init->motor.motor_gpio[1].gpio, init->motor.motor_gpio[1].in1 | init->motor.motor_gpio[1].in2, GPIO_PIN_RESET);

    // 配置电机 3 的方向引脚（注意 Cin1 和 Cin2 所属 GPIO 不同）
    GPIO_InitTypeDef Motor3_InitStructure_CIN1;
    Motor3_InitStructure_CIN1.Mode = GPIO_MODE_OUTPUT_PP;
    Motor3_InitStructure_CIN1.Pull = GPIO_NOPULL;
    Motor3_InitStructure_CIN1.Speed = GPIO_SPEED_FREQ_HIGH;
    Motor3_InitStructure_CIN1.Pin = init->motor.motor_gpio[2].in1;
    HAL_GPIO_Init(init->motor.motor_gpio[2].gpio, &Motor3_InitStructure_CIN1);
    HAL_GPIO_WritePin(init->motor.motor_gpio[2].gpio, init->motor.motor_gpio[2].in1, GPIO_PIN_RESET);

    GPIO_InitTypeDef Motor3_InitStructure_CIN2;
    Motor3_InitStructure_CIN2.Mode = GPIO_MODE_OUTPUT_PP;
    Motor3_InitStructure_CIN2.Pull = GPIO_NOPULL;
    Motor3_InitStructure_CIN2.Speed = GPIO_SPEED_FREQ_HIGH;
    Motor3_InitStructure_CIN2.Pin = init->motor.motor_gpio[2].in2;
    HAL_GPIO_Init(GPIOE, &Motor3_InitStructure_CIN2); // Cin2 所属 GPIO 为 GPIOE
    HAL_GPIO_WritePin(GPIOE, init->motor.motor_gpio[2].in2, GPIO_PIN_RESET);

    // 配置电机 4 的方向引脚
    GPIO_InitTypeDef Motor4_InitStructure;
    Motor4_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
    Motor4_InitStructure.Pull = GPIO_NOPULL;
    Motor4_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
    Motor4_InitStructure.Pin = init->motor.motor_gpio[3].in1 | init->motor.motor_gpio[3].in2;
    HAL_GPIO_Init(init->motor.motor_gpio[3].gpio, &Motor4_InitStructure);
    HAL_GPIO_WritePin(init->motor.motor_gpio[3].gpio, init->motor.motor_gpio[3].in1 | init->motor.motor_gpio[3].in2, GPIO_PIN_RESET);
}

void Chassis_Init(void)
{  
    ChassisMotor.maxVx = 79000.2f ;
    ChassisMotor.maxVy = 79000.2f ;
    
    /*由于每个电机体质不一样，甚至左右转速不一，所以出此下策*/
    ChassisMotor.maxRpm_Left[0] = 307;  //已测试 307        
    ChassisMotor.maxRpm_Left[1] = 360;  //已测试
    ChassisMotor.maxRpm_Left[2] = 350;  //已测试
    ChassisMotor.maxRpm_Left[3] = 345;
    
    ChassisMotor.maxRpm_Right[0] = 330; //已测试 330
    ChassisMotor.maxRpm_Right[1] = 360; //已测试
    ChassisMotor.maxRpm_Right[2] = 350; //已测试
    ChassisMotor.maxRpm_Right[3] = 345;
    
    ChassisMotor.gear = 1;              //档位1, 2, 3
    
    ChassisMotor.speedtap[0] = 0.3;
    ChassisMotor.speedtap[1] = 0.5;
    ChassisMotor.speedtap[2] = 1;
    ChassisMotor.pidMode = PID_POSITION;

    ChassisMotor.chassisVx = 0;
    ChassisMotor.chassisVy = 0;

    ChassisMotor.chassisVx_calc = 0;    //速度规划的
    ChassisMotor.chassisVy_calc = 0;

    ChassisMotor.positionX = 0;
    ChassisMotor.positionY = 0;
    //初始化，舵机状态归零
    Servo1_Close;
    Servo2_Close;

    servo_ctrl = Servo_NOON;
    MotorPID_Init();




    Chassis_GPIOInit(&ChassisMotor);
}

void Chassis_PIDCalc(ChassisMotor_t *pid)
 {   
    int i;
    for(i = 0; i<4; i++)
    {
        if(pid->motor.motor_set[i].speed_set != pid->motor.motor_fdb[i].speed_fdb)
        {
            pid->motor.motor_set[i].pid_speed = PID_Calc(&Chassis_PID[i], pid->motor.motor_fdb[i].speed_fdb, pid->motor.motor_set[i].speed_set);
            
            
            if(myabs(pid->motor.motor_set[i].speed_set) < 0.1)
            {
                pid->motor.motor_set[i].pid_speed = 0;
            }
            float temp;
            if(pid->motor.motor_set[i].pid_speed > 0)
            {
                temp = pid->motor.motor_set[i].pid_speed / ChassisMotor.maxRpm_Left[i];
                pid->motor.motor_set[i].current_set = (uint16_t)(temp * 100);
            }
            else if(pid->motor.motor_set[i].pid_speed < 0)
            {
                temp = pid->motor.motor_set[i].pid_speed / ChassisMotor.maxRpm_Right[i];
                pid->motor.motor_set[i].current_set = (uint16_t)(temp * 100);
            }
            if(pid->motor.motor_set[i].current_set > 100){pid->motor.motor_set[i].current_set = 100;}
            
            //Motor Turn 引脚翻转，控制电机方向
            //用上这个就可以利用PID做到刹车的功能
            if(pid->motor.motor_set[i].pid_speed > 0)
            {
                HAL_GPIO_WritePin(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in1,GPIO_PIN_SET);
                HAL_GPIO_WritePin(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in2,GPIO_PIN_RESET);
            }
            else if(pid->motor.motor_set[i].pid_speed < 0)
            {
                HAL_GPIO_WritePin(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in2,GPIO_PIN_SET);
                HAL_GPIO_WritePin(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in1,GPIO_PIN_RESET);
            }
            else if(pid->motor.motor_set[i].pid_speed == 0)
            {
                HAL_GPIO_WritePin(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in1,GPIO_PIN_SET);
                HAL_GPIO_WritePin(pid->motor.motor_gpio[i].gpio, pid->motor.motor_gpio[i].in2,GPIO_PIN_SET);
            }

        }
        else if((pid->motor.motor_set[i].speed_set == 0) && (pid->motor.motor_fdb[i].speed_fdb == 0))
        {
            pid->motor.motor_set[i].pid_speed = 0;
        }
    }
}

void Motor_Control(int16_t current_1,int16_t current_2,int16_t current_3,int16_t current_4)
{
    __HAL_TIM_SetCompare(&htim12,TIM_CHANNEL_1,current_1);
    __HAL_TIM_SetCompare(&htim12,TIM_CHANNEL_2,current_2);
    __HAL_TIM_SetCompare(&htim9,TIM_CHANNEL_1,current_3);
    __HAL_TIM_SetCompare(&htim9,TIM_CHANNEL_2,current_4);
}

void Motor_Turn(ChassisMotor_t *turn)
{
    int i;
    for(i = 0; i < 4; i++)
    {
                if(turn->motor.motor_set[i].speed_set > 0)
                {
                    HAL_GPIO_WritePin(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in1,GPIO_PIN_SET);
                    HAL_GPIO_WritePin(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in2,GPIO_PIN_RESET);
                }
                else if(turn->motor.motor_set[i].speed_set < 0)
                {
                    HAL_GPIO_WritePin(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in2,GPIO_PIN_SET);
                    HAL_GPIO_WritePin(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in1,GPIO_PIN_RESET);
                    
                }
                else if(turn->motor.motor_set[i].speed_set == 0)
                {
                    HAL_GPIO_WritePin(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in1,GPIO_PIN_SET);
                    HAL_GPIO_WritePin(turn->motor.motor_gpio[i].gpio, turn->motor.motor_gpio[i].in2,GPIO_PIN_SET);

                }
    }
}

void Chassis_FSM_TEST(void)
{
//    Laser_Data = VL5300_GetDataSetPoint();
    if(auto_num == 0)
    {    
        auto_num++;
        chassis_ctrl = STOP_WAIT;
        Chassis_Task();
        HAL_Delay(2000-1);
        chassis_ctrl = Forward_PATH;
        time = 0;
        while(time  <= 920){ Chassis_Task();}
        time = 0;
        chassis_ctrl = STOP_WAIT;
        while(time  <= 100){ Chassis_Task();}
        time = 0;
        chassis_ctrl = Forward_PATH;
        while(time  <= 200){ Chassis_Task();}
        time = 0;
       /* chassis_ctrl = Left_PATH;
        while(time  <= 580){ Chassis_Task();}
        time = 0;*/
        chassis_ctrl = STOP_WAIT;
        while(time  <= 50){ Chassis_Task();}
        time = 0;
        chassis_ctrl = Right_PATH;
        while(time  <= 650){ Chassis_Task();}
        time = 0;
        chassis_ctrl = Left_PATH;
        while(time  <= 640){ Chassis_Task();}
        time = 0;
        chassis_ctrl = Backward_PATH;
        while(time  <= 920 + 230){ Chassis_Task();}
        time = 0;
    }
    chassis_ctrl = STOP_WAIT;
    Chassis_Task();
}
